# argus

./: .dev.vars.example  .gitignore  ARGUS_DIFFERENTIAL_REVIEW_2026-07-22.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  PR_PLAN.md  README.md  bunfig.toml  meeting  package.json  tsconfig.json  wrangler.toml
.github/workflows/: ci.yml  demo-seed.yml  docs.yml  release.yml
desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  sign-windows-artifact.ps1  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  proxy.rs
desktop/ui/: about.html  index.html  settings.html
docs/: .env.example  about.md  agentsview-import.md  architecture.md  argus-hub.md  building.md  capability-events.md  changelog.md  cli-reference.md  configuration.md  database-schema.md  download.md  glossary.md  how-it-works.md  index.md  installation.md  llm-providers.md  metric-views.md  model-gateway.md  overview.md  privacy.md  screenshots.yaml  session-model.md  sessions.md  settings-reference.md  settings.md  supported-agents.md  task-interpretation.md  tasks.md  terminology.md  transcript-cache-architecture.md  transcript-cache-operations.md  web-app.md
docs/.vitepress/: config.ts  env.d.ts
docs/contributing/: README.md  (+2 more)
npm/: dev-launcher.cjs  launcher.cjs
scripts/: bench-cache.ts  build-desktop.ts  build-npm-packages.ts  bump-version.ts  demo.ts  dev.sh  generate-docs-changelog.ts  get-version.ts  reset-task-interpretation.ts  screenshot.ts  stage-desktop-sidecar.sh  stage-desktop-sidecar.ts  trace-claude-p.sh  watch-files-fsusage.sh
src/: agentsview-import.ts  aggregate.ts  assets.d.ts  auth.ts  backoff.ts  banner.ts  brand.ts  cache-contract.ts  cache-store.ts  capability-events.ts  chartjs.ts  cli-options.ts  cli.ts  client-fingerprint.ts  config.ts  console-report.ts  dashboard-builder.ts  debug-info.ts  dialogue.ts  friction.ts  health.ts  index-ops.ts  index.ts  inventory.ts  logger.ts  managed-config.ts  parse-claude.ts  parse-codex.ts  parse-gemini.ts  parse-incremental.ts  parse.ts  paths.ts  pricing.ts  producer.ts  push.ts  recommendations.ts  reconcile.ts  renderers.ts  report.ts  run.ts  (+17 more)
test/: agentsview-import.test.ts  aggregate.test.ts  argus-demo-store.test.ts  auth.test.ts  backoff.test.ts  banner.test.ts  cache-contract.test.ts  cache-store.test.ts  capability-events.test.ts  claude-chat.test.ts  cli.test.ts  client-fingerprint.test.ts  config.test.ts  console-report.test.ts  contract.test.ts  dashboard-views.test.ts  demo.test.ts  dialogue.test.ts  discover.test.ts  docs-download.test.ts  friction.test.ts  hub-key.test.ts  hub-push.test.ts  interpret-drain.test.ts  inventory.test.ts  llm.test.ts  logger.test.ts  managed-config.test.ts  parse-claude.test.ts  parse-codex.test.ts  parse-cowork.test.ts  parse-gemini.test.ts  parse-incremental.test.ts  parse.test.ts  paths.test.ts  pricing.test.ts  push.test.ts  recommendations.test.ts  reconcile.test.ts  reindex.test.ts  (+21 more)
web/: index.html  tsconfig.json  vite.config.ts
(+181 files in other folders)
