[package]
name = "argus-desktop"
version = "0.1.22"
description = "Audit your Claude Code, Codex, and Gemini CLI usage: tokens over time, skill/plugin/MCP-server attribution, and per-session summaries. Reads local transcripts; emits a self-contained HTML dashboard."
authors = ["hayes.davis@agentdeployment.co", "jerry@agentdeployment.co", "mando@agentdeployment.co"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2.5.1"
notify = "8"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }

[target."cfg(target_os = \"macos\")".dependencies]
# SMAppService bindings for the login-item registration (macOS 13+). objc2 is already in the
# dependency tree via tauri; the version here must stay in step with the one tauri pins.
objc2 = "0.6"
objc2-service-management = "0.3"

[target."cfg(windows)".dependencies]
# Already a transitive dependency of tauri-plugin-autostart (via auto-launch); used directly to
# tell "not registered" apart from "disabled by the user in Task Manager" (see
# `windows_startup_disabled_in_task_manager`).
winreg = "0.55"
